# wavefunc

./: .env.example  .env.sample  .gitignore  .mcp.json  .prettierignore  .prettierrc  .taurignore  CACHE_INVALIDATION_SOLUTION.md  CHANGELOG.md  CLAUDE.md  CONTEXTVM_SETUP.md  Caddyfile  DEPLOYMENT.md  DESIGN.md  Dockerfile  LICENSE  MIGRATION.md  PLAYER_IMPLEMENTATION.md  Procfile  QUICK_START.md  README.md  SONG_SPEC.md  SPEC.md  SPEC_DIAGRAM.md  STATUS.md  TAURI_SETUP.md  assets.html  build.ts  bunfig.toml  ctxcn.config.json  docker-compose.yml  ecosystem.config.cjs  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  test-comprehensive-streams.js  test-env.sh  test-now-playing.js  (+2 more)
.cargo/: config.toml
.claude/: settings.local.json
contextvm/: CONFIGURATION.md  README.md  schemas.ts  server.ts  test-client.ts
docs/: AGENDA.md  ARCHITECTURE_CLASS_METHODS.md  CONTEXTVM_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_IMPROVEMENTS.md  DOMAIN_SETUP.md  METADATA_STRATEGY.md  MIGRATION_GUIDE.md  MUSICBRAINZ_REFACTOR.md  PLAYER_IMPLEMENTATION.md  RELEASE_CHECKLIST.md  RELEASING.md
public/: manifest.json
relay/: .gitignore  Makefile  QUICKSTART.md  README.md  go.mod  go.sum  main.go  setup.sh
scripts/: README.md  seed.ts  (+25 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/android-template/: build.gradle.kts
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/desktop/: media_keys.rs  mod.rs  tray.rs
(+541 files in other folders)
