[package]
name = "wavefunc"
version = "0.1.0"
description = "Decentralized Radio Platform"
authors = ["Schlaus Kwab"]
license = "MIT"
edition = "2021"

[lib]
name = "wavefunc_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "image-png", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
